@@ -13,7 +13,7 @@ CFLAGS=		@CFLAGS@ \
 		-DPRIVSEP_USER=\"$(PRIVSEP_USER)\" \
 		-DSYSCONFDIR=\"$(SYSCONFDIR)\" \
 		-DCONFDIR=\"$(CONFDIR)\"
-CLDFLAGS=	@CLDFLAGS@
+CLDFLAGS=	@CLDFLAGS@ @LIBS@
 INSTALL=	@INSTALL@
 RM=		rm
 RMFLAGS=	-rf
