@@ -678,8 +678,10 @@ fi
 # compilation flags #
 ########################################################################
 
+mkf_sed 'configure_input' "Generated by pmkcfg.sh"
 mkf_sed 'CFLAGS' "$CFLAGS $PS_FLAGS"
-mkf_sed 'CLDFLAGS' "$CLDFLAGS $LGEN_FLAGS $LM_FLAGS"
+mkf_sed 'CLDFLAGS' "$CLDFLAGS"
+mkf_sed 'LIBS' "$LGEN_FLAGS $LM_FLAGS"
 
 
 #
