@@ -92,11 +92,16 @@
 #endif
 
 #define PREMAKE_CONFIG		"pmk.conf"
+#define PREMAKE_HOME_DIR	".pmk"
+#define PREMAKE_SYS_DIR		"pmk"
 #define PREMAKE_FILENAME	"pmkfile"
 #define PREMAKE_PKGFILE		"pkgfile"
 
 #define PREMAKE_CONFIG_PATH	CONFDIR "/" PREMAKE_CONFIG
 #define PREMAKE_CONFIG_PATH_BAK	PREMAKE_CONFIG_PATH ".bak"
+
+#define PMK_CFG_HOME_FMT	"%s/" PREMAKE_HOME_DIR "/" PREMAKE_CONFIG
+#define PMK_CFG_SYS_FMT		SYSCONFDIR "/" PREMAKE_SYS_DIR "/" PREMAKE_CONFIG
 
 #define PREMAKE_TMP_DIR		TMPDIR
 
